# seqsvr

./: .gitignore  CMakeLists.txt  Project.cbp  README.md  main.cpp  seqsvr
allocsvr/: CMakeLists.txt  alloc_seq.cpp  alloc_seq.h  allocsvr.pb.cc  allocsvr.pb.h  allocsvr.profile.txt  allocsvr.proto  allocsvr_client.conf  allocsvr_client.cpp  allocsvr_client.h  allocsvr_main  allocsvr_main.cpp  allocsvr_server.conf  allocsvr_server_config.cpp  allocsvr_server_config.h  allocsvr_service_impl.cpp  allocsvr_service_impl.h  allocsvr_tool_impl.cpp  allocsvr_tool_impl.h  allocsvr_tool_main  allocsvr_tool_main.cpp  phxrpc_allocsvr_dispatcher.cpp  phxrpc_allocsvr_dispatcher.h  phxrpc_allocsvr_service.cpp  phxrpc_allocsvr_service.h  phxrpc_allocsvr_stub.cpp  phxrpc_allocsvr_stub.h  phxrpc_allocsvr_tool.cpp  phxrpc_allocsvr_tool.h  sect_seq.cpp  sect_seq.h  storesvr_proxy.cpp  storesvr_proxy.h
allocsvr_tests/: AllocSvr.heap.log.0001.heap  CMakeLists.txt  allocSvrTest  alloc_client_test.cpp  allocsvr_test_main.cpp  sect_seq_test.cpp
comm/: CMakeLists.txt  errordef.h  router_list_diff.cpp  router_list_diff.h  routerinfo.pb.cc  routerinfo.pb.h  routerinfo.proto  routerinfo_util.cpp  routerinfo_util.h
comm_tests/: CMakeLists.txt  comm.hprof.0001.heap  comm_test_main.cpp  macros.h  rand_util.cpp  rand_util.h  routerinfo_util_test.cpp  routerlist_diff_test.cpp
storesvr/: CMakeLists.txt  phxrpc_storesvr_dispatcher.cpp  phxrpc_storesvr_dispatcher.h  phxrpc_storesvr_service.cpp  phxrpc_storesvr_service.h  phxrpc_storesvr_stub.cpp  phxrpc_storesvr_stub.h  phxrpc_storesvr_tool.cpp  phxrpc_storesvr_tool.h  sectioninfo.pb.cc  sectioninfo.pb.h  sectioninfo.proto  store_bin_util.cpp  store_bin_util.h  storesvr.pb.cc  storesvr.pb.h  storesvr.proto  storesvr_client.conf  storesvr_client.cpp  storesvr_client.h  storesvr_main.cpp  storesvr_server.conf  storesvr_server_config.cpp  storesvr_server_config.h  storesvr_service_impl.cpp  storesvr_service_impl.h  storesvr_tool_impl.cpp  storesvr_tool_impl.h  storesvr_tool_main  storesvr_tool_main.cpp
xml/: allocsvr.xml  routerinfo.xml  schema.xsd  sectioninfo.xml
